fixed HTML and tile alignment after API output.

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -10,6 +10,7 @@ body{
 .img-dropbox {
   width:100%;
   height: 440px;
+  overflow: hidden;
 }
 
 .fixed-bottom{
@@ -20,10 +21,10 @@ body{
 html {
   font-family: 
 }
-
-
 .main {
   flex: 1 0 auto;
 }
-    
-
+.urlInput{
+  padding: 2% 0 !important;
+}    
+img
